# WinPaste

./: .gitignore  AGENTS.md  CNAME  README.md  README_CN.md  build_appstore.sh  bump_version.sh  generate_icons.ps1  index.html  package.json  pnpm-lock.yaml  privacy.html  project_analysis.md  style.css  support.html  tailwind.config.js  terms.html
.claude/: settings.local.json
.gemini/: GEMINI.md
.github/workflows/: release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/app_store_prep_20260214/: index.md  metadata.json  plan.md  spec.md
conductor/archive/ui_polish_20260214/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/app_store_prep_20260214/: plan.md
conductor/tracks/sql_performance_audit_20260214/: audit_report.md  index.md  metadata.json  plan.md
docs/: TODO.md  appstore_or_others.md  appstore_submit.md  fix_warning_expr.md  gemini-TODO.md  macOS-grab-appname_icon.md  macOS-mainthread.md  macos_get_foremost_app.md  submit_to_appstore.md
docs/product_pages/: APPSTORE_CHECKLIST.md  GITHUB_PAGES_SETUP.md  _config.yml
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: AiResultDialog.tsx  ClipCard.tsx  ClipList.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ControlBar.tsx  DragPreview.tsx  FolderModal.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  ThreeDPet.tsx
frontend/src/components/ui/: Select.tsx
frontend/src/hooks/: useKeyboard.ts  useLanguage.ts  useTheme.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/types/: index.ts
frontend/src/utils/: platform.ts
frontend/src/windows/: SettingsWindow.tsx
product_pages/: privacy.html  support.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  PastePaw.provisionprofile  meta.json  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  clipboard.rs  commands.rs  constants.rs  database.rs  lib.rs  main.rs  models.rs  settings_commands.rs  settings_manager.rs  source_app_macos.rs
