[package]
name = "winpaste"
version = "1.0.0"
description = "A beautiful clipboard history manager for Windows"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
image = "0.24"
thiserror = "1"
futures = "0.3"
dirs = "5"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
base64 = "0.22.1"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_DataExchange"] }
tauri-plugin-clipboard = "2.1.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
